force-app/main/default/objects/Account/fields/A_Grade_Conformance_40__c.field-meta.xml
<CustomField>
    <fullName>A_Grade_Conformance_40__c</fullName>
    <formula>A_Grade_Conformance__c &gt;= 0.4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>&quot;A&quot; Grade Conformance &gt;=40%</label>
    <type>Checkbox</type>
</CustomField>