force-app/main/default/objects/Account/fields/A_Grade_Conformance__c.field-meta.xml
<CustomField>
    <fullName>A_Grade_Conformance__c</fullName>
    <label>&quot;A&quot; Grade Conformance %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>