force-app/main/default/objects/Account/fields/Account_Alert__c.field-meta.xml
<CustomField>
    <fullName>Account_Alert__c</fullName>
    <label>Account Alert</label>
    <type>TextArea</type>
</CustomField>