force-app/main/default/objects/Account/fields/Account_Alert_Present__c.field-meta.xml
<CustomField>
    <fullName>Account_Alert_Present__c</fullName>
    <formula>NOT(ISBLANK(Account_Alert__c))</formula>
    <label>Account Alert Present</label>
    <type>Checkbox</type>
</CustomField>