force-app/main/default/objects/Account/fields/Account_Background__c.field-meta.xml
<CustomField>
    <fullName>Account_Background__c</fullName>
    <inlineHelpText>Give information on if they were lapsed before and chose to renew, bought a company and changed the name of the account, etc.</inlineHelpText>
    <label>Account Background</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>