force-app/main/default/objects/Account/fields/Account_Entered_By__c.field-meta.xml
<CustomField>
    <fullName>Account_Entered_By__c</fullName>
    <label>Account Entered By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aaron Light</fullName>
            </value>
            <value>
                <fullName>Abdulkader Al Neama</fullName>
            </value>
            <value>
                <fullName>Adam Laing</fullName>
            </value>
            <value>
                <fullName>Adam Logan</fullName>
            </value>
            <value>
                <fullName>Adam Wendt</fullName>
            </value>
            <value>
                <fullName>Adrienne Turner</fullName>
            </value>
            <value>
                <fullName>Aierken Remile</fullName>
            </value>
            <value>
                <fullName>Alexandria Root</fullName>
            </value>
            <value>
                <fullName>Alex Bowles</fullName>
            </value>
            <value>
                <fullName>Alex Campbell</fullName>
            </value>
            <value>
                <fullName>Alex Clausen</fullName>
            </value>
            <value>
                <fullName>Alix MacEwan</fullName>
            </value>
            <value>
                <fullName>Allie Pulaski</fullName>
            </value>
            <value>
                <fullName>Allie Rodenberg</fullName>
            </value>
            <value>
                <fullName>Allison Purtell</fullName>
            </value>
            <value>
                <fullName>Alyson Tart</fullName>
            </value>
            <value>
                <fullName>Alyssa Savana</fullName>
            </value>
            <value>
                <fullName>Amanda Fuller</fullName>
            </value>
            <value>
                <fullName>Amanda Hobaugh</fullName>
            </value>
            <value>
                <fullName>Amanda Machado</fullName>
            </value>
            <value>
                <fullName>Amber Johnson</fullName>
            </value>
            <value>
                <fullName>Andrea Castillo</fullName>
            </value>
            <value>
                <fullName>Andrew Coggins</fullName>
            </value>
            <value>
                <fullName>Andrew Rich</fullName>
            </value>
            <value>
                <fullName>Angie Gould</fullName>
            </value>
            <value>
                <fullName>Angie Koniaris</fullName>
            </value>
            <value>
                <fullName>Anna Peterson</fullName>
            </value>
            <value>
                <fullName>Anthony Bunker</fullName>
            </value>
            <value>
                <fullName>Ashlee Seigler</fullName>
            </value>
            <value>
                <fullName>Ashley Rector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>