force-app/main/default/objects/Account/fields/Account_Info_Source_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Account_Info_Source_Last_Update__c</fullName>
    <description>Date of most recent update to Account Information Source.</description>
    <inlineHelpText>Date of most recent update to Account Information Source.</inlineHelpText>
    <label>Account Info Source Last Update</label>
    <type>Date</type>
</CustomField>