force-app/main/default/objects/Account/fields/Account_Information_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Information_Source__c</fullName>
    <label>Account Information Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACC Smartbrief</fullName>
            </value>
            <value>
                <fullName>Akin Gump</fullName>
            </value>
            <value>
                <fullName>API SmartBrief</fullName>
            </value>
            <value>
                <fullName>Bloomberg</fullName>
            </value>
            <value>
                <fullName>Canadian Manufacturing</fullName>
            </value>
            <value>
                <fullName>Capital Hill Group</fullName>
            </value>
            <value>
                <fullName>COMAH</fullName>
            </value>
            <value>
                <fullName>Company Website</fullName>
            </value>
            <value>
                <fullName>Conference Attendee List</fullName>
            </value>
            <value>
                <fullName>CONNECT Conference</fullName>
            </value>
            <value>
                <fullName>DISC Belgium</fullName>
            </value>
            <value>
                <fullName>Downstream Today</fullName>
            </value>
            <value>
                <fullName>E&amp;P Newsletter</fullName>
            </value>
            <value>
                <fullName>EHS Today</fullName>
            </value>
            <value>
                <fullName>Hart Energy Newsletter/Oil and Gas Investor Weekly</fullName>
            </value>
            <value>
                <fullName>Industrial BIOtech SmartBrief</fullName>
            </value>
            <value>
                <fullName>Industry Website</fullName>
            </value>
            <value>
                <fullName>LNG World News</fullName>
            </value>
            <value>
                <fullName>Lubes&#39;N&#39;Greases</fullName>
            </value>
            <value>
                <fullName>Manufacturing.net</fullName>
            </value>
            <value>
                <fullName>Midstream Business</fullName>
            </value>
            <value>
                <fullName>Offshore Energy Today</fullName>
            </value>
            <value>
                <fullName>OHS Canada</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas Journal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Renewable Fuels Association</fullName>
            </value>
            <value>
                <fullName>Rig Zone Daily News (Downstream)</fullName>
            </value>
            <value>
                <fullName>Shale Smart Brief Powered by API</fullName>
            </value>
            <value>
                <fullName>SmartBrief on Sustainability</fullName>
            </value>
            <value>
                <fullName>Tank News International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>