force-app/main/default/objects/Account/fields/Account_Metrics_Badge_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Account_Metrics_Badge_Item_Count__c</fullName>
    <formula>IF(Average_days_for_pending_items_14_days__c,1,0)+
IF(Login_to_contractor_ratio_3_1__c,1,0)+
IF(Consequences_Variance_Process_Enforced__c,1,0)+
IF(Implementation_at_Site_Field_Level__c,1,0)+
IF(CVENT_Survey_Response_Rate_15__c,1,0)+
IF(Host_UGM_HD__c,1,0)+
IF(Client_Reference__c,1,0)+
IF(Speak_at_ISN_Event_RT_CONNECT_etc__c,1,0)+
IF(Director_Higher_Annual_Metrics_Meeting__c,1,0)+
IF((IF(INCLUDES(Use_of_Primary_Tools_8__c,&quot;Acknowledgment Form&quot;),1,0)+
IF(INCLUDES(Use_of_Primary_Tools_8__c,&quot;Action Item Tracker&quot;),1,0)+
IF(INCLUDES(Use_of_Primary_Tools_8__c,&quot;Audits/Evaluation&quot;),1,0)+
IF(INCLUDES(Use_of_Primary_Tools_8__c,&quot;Bulletin Board&quot;),1,0)+
IF(INCLUDES(Use_of_Primary_Tools_8__c,&quot;Contracts/Agreements&quot;),1,0)+
IF(INCLUDES(Use_of_Primary_Tools_8__c,&quot;Custom Fields&quot;),1,0)+
IF(INCLUDES(Use_of_Primary_Tools_8__c,&quot;Client Specific Documents&quot;),1,0)+
IF(INCLUDES(Use_of_Primary_Tools_8__c,&quot;ISN Assistance / Hiring Client Notes&quot;),1,0)+
IF(INCLUDES(Use_of_Primary_Tools_8__c,&quot;Insurance (PRAVS)&quot;),1,0)+
IF(INCLUDES(Use_of_Primary_Tools_8__c,&quot;Job Bid&quot;),1,0)+
IF(INCLUDES(Use_of_Primary_Tools_8__c,&quot;My Contractor List&quot;),1,0)+
IF(INCLUDES(Use_of_Primary_Tools_8__c,&quot;Online Training Tool&quot;),1,0)+
IF(INCLUDES(Use_of_Primary_Tools_8__c,&quot;Site Tracker/Time &amp; Attendance Tracker&quot;),1,0)+
IF(INCLUDES(Use_of_Primary_Tools_8__c,&quot;TQ/OQ&quot;),1,0)+
IF(INCLUDES(Use_of_Primary_Tools_8__c,&quot;Variance Tool&quot;),1,0))&gt;=8,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Metrics Badge Item Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>