force-app/main/default/objects/Account/fields/Account_Metrics_Current_Badge_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Metrics_Current_Badge_Text__c</fullName>
    <formula>CASE(Account_Metrics_Badge_Item_Count__c,5,&quot;Account Apprentice&quot;, 
6,&quot;Account Apprentice&quot;, 
7,&quot;Account Rock Star&quot;, 
8,&quot;Account Rock Star&quot;, 
9,&quot;Account Wizard&quot;, 
10,&quot;Account Wizard&quot;,&quot;Just Getting Started&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Metrics Current Badge (Text)</label>
    <type>Text</type>
</CustomField>