force-app/main/default/objects/Account/fields/Account_Name_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Encrypted__c</fullName>
    <externalId>true</externalId>
    <label>Account Name Encrypted</label>
    <length>100</length>
    <type>Text</type>
</CustomField>