force-app/main/default/objects/Account/fields/Account_Quaternary__c.field-meta.xml
<CustomField>
    <fullName>Account_Quaternary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Quaternary</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QuaternaryAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>