force-app/main/default/objects/Account/fields/Account_Rep_Tags__c.field-meta.xml
<CustomField>
    <fullName>Account_Rep_Tags__c</fullName>
    <inlineHelpText>Type in any hashtags (#) here that you want to run reports on.</inlineHelpText>
    <label>Account Rep Tags</label>
    <type>TextArea</type>
</CustomField>