force-app/main/default/objects/Account/fields/Account_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Account_Secondary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Secondary</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>