force-app/main/default/objects/Account/fields/Account_Setup_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Account_Setup_Checklist__c</fullName>
    <label>Account Setup Checklist</label>
    <summaryFilterItems>
        <field>Account_Summary__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Account Setup Checklist</value>
    </summaryFilterItems>
    <summaryForeignKey>Account_Summary__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>