force-app/main/default/objects/Account/fields/Account_Team__c.field-meta.xml
<CustomField>
    <fullName>Account_Team__c</fullName>
    <formula>&#39;Primary: &#39; &amp; Primary_Full_Name__c &amp; 
IF(ISBLANK(Account_Secondary__c), &#39;&#39; , &#39; | &#39; &amp; &#39;Secondary: &#39; &amp; Secondary_Full_Name__c) &amp;
IF(ISBLANK(Account_Tertiary__c), &#39;&#39; ,  &#39; | &#39; &amp; &#39;Tertiary: &#39; &amp; Tertiary_Full_Name__c) &amp; 
IF(ISBLANK(Account_Quaternary__c), &#39;&#39; ,  &#39; | &#39; &amp; &#39;Quaternary: &#39; &amp; Quaternary_Full_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Managers</label>
    <type>Text</type>
</CustomField>