force-app/main/default/objects/Account/fields/Account_Wizard_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Wizard_Date__c</fullName>
    <inlineHelpText>Badges are earned by checklist items that are added after July 1, 2015. If a badge is displayed in Salesforce and no name is present in Awarded To field, the badge was earned prior to July 1, 2015.</inlineHelpText>
    <label>Account Wizard Date</label>
    <type>Date</type>
</CustomField>