force-app/main/default/objects/Account/fields/AccountLocation__c.field-meta.xml
<CustomField>
    <fullName>AccountLocation__c</fullName>
    <label>Account Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>