force-app/main/default/objects/Account/fields/Accounts_Payable_Notes__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Payable_Notes__c</fullName>
    <label>Accounts Payable Notes</label>
    <type>TextArea</type>
</CustomField>