force-app/main/default/objects/Account/fields/AccountValue__c.field-meta.xml
<CustomField>
    <fullName>AccountValue__c</fullName>
    <formula>If(ISPICKVAL(ISNetworld_Status__c, &#39;Subscriber&#39;), 1, If(ISPICKVAL(ISNetworld_Status__c, &#39;Lapsed&#39;),-1,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountValue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>