force-app/main/default/objects/Account/fields/Active_HC_Connections__c.field-meta.xml
<CustomField>
    <fullName>Active_HC_Connections__c</fullName>
    <label># Active HC Connections</label>
    <summaryFilterItems>
        <field>Vendor_Connection__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Vendor_Connection__c.Contractor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>