force-app/main/default/objects/Account/fields/Additional_Functionality_Used__c.field-meta.xml
<CustomField>
    <fullName>Additional_Functionality_Used__c</fullName>
    <inlineHelpText>Briefly describe any unique functionality (do not include standard items like MSQ, Standard RAVS Matrix, etc)</inlineHelpText>
    <label>Additional Functionality Used</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>