force-app/main/default/objects/Account/fields/Additional_Industries__c.field-meta.xml
<CustomField>
    <fullName>Additional_Industries__c</fullName>
    <inlineHelpText>Select any additional industries for the account, other than the Primary industry.</inlineHelpText>
    <label>Additional Industries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Industries</valueSetName>
    </valueSet>
</CustomField>