force-app/main/default/objects/Account/fields/Advantage_Over_ISN__c.field-meta.xml
<CustomField>
    <fullName>Advantage_Over_ISN__c</fullName>
    <label>Advertised Advantage Over ISN</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>