force-app/main/default/objects/Account/fields/Agreement_Exp_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Exp_Notification_Date__c</fullName>
    <formula>Agreement_Expiration_Date__c -  Reminder_Days_Before_Expiration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Exp Notification Date</label>
    <type>Date</type>
</CustomField>