force-app/main/default/objects/Account/fields/Agreement_Initial_Expiration_Period__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Initial_Expiration_Period__c</fullName>
    <label>Agreement Initial Expiration Period</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>