force-app/main/default/objects/Account/fields/Agreement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Notes__c</fullName>
    <label>Agreement Notes</label>
    <type>TextArea</type>
</CustomField>