force-app/main/default/objects/Account/fields/Agreement_Renewal_Expiration_Period__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Renewal_Expiration_Period__c</fullName>
    <inlineHelpText>List in years</inlineHelpText>
    <label>Agreement Renewal Expiration Period</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>