force-app/main/default/objects/Account/fields/Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Status__c</fullName>
    <label>Agreement Status (Old)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Pending Legal</fullName>
            </value>
            <value>
                <fullName>Sent New Agreement</fullName>
            </value>
            <value>
                <fullName>Pending Client</fullName>
            </value>
            <value>
                <fullName>Pending New Agreement</fullName>
            </value>
            <value>
                <fullName>Signed/Executed</fullName>
            </value>
            <value>
                <fullName>Pending Termination</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>