force-app/main/default/objects/Account/fields/Agreement_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Termination_Date__c</fullName>
    <label>Agreement Termination Date</label>
    <type>Date</type>
</CustomField>