force-app/main/default/objects/Account/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <inlineHelpText>For Client Agreements, please get with a supervisor/manager to review agreement or status from the agreements server. Status in Salesforce should not be relied on as primary source for agreement status.</inlineHelpText>
    <label>Agreement Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Agreement_Status__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Client Form Agreement</fullName>
            </value>
            <value>
                <fullName>Confidential Disclosure Agreement</fullName>
            </value>
            <value>
                <fullName>Data Provider Agreement</fullName>
            </value>
            <value>
                <fullName>Data Sharing Agreement</fullName>
            </value>
            <value>
                <fullName>ISN Form Hiring Client User Agreement</fullName>
            </value>
            <value>
                <fullName>No Agreement on File</fullName>
            </value>
            <value>
                <fullName>Non-disclosure Agreement</fullName>
            </value>
            <value>
                <fullName>Online Agreement (as is)</fullName>
            </value>
            <value>
                <fullName>Online Agreement w/ Amendment</fullName>
            </value>
            <value>
                <fullName>Online Agreement w/ Signature</fullName>
            </value>
            <value>
                <fullName>Online Services Agreement</fullName>
            </value>
            <value>
                <fullName>Onsite Validation Data Agreement</fullName>
            </value>
            <value>
                <fullName>Purchase Order</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>