force-app/main/default/objects/Account/fields/Alternate_Previous_Names__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Previous_Names__c</fullName>
    <inlineHelpText>Any Alternate Names or Subsidiary Names which are not related to the ISNetworld HC Account Name to improve search</inlineHelpText>
    <label>Alternate/Previous Names</label>
    <type>TextArea</type>
</CustomField>