force-app/main/default/objects/Account/fields/Annual_Mgmt_Meeting_Held__c.field-meta.xml
<CustomField>
    <fullName>Annual_Mgmt_Meeting_Held__c</fullName>
    <label>Last Meeting with Director or Higher</label>
    <type>Date</type>
</CustomField>