force-app/main/default/objects/Account/fields/Authorized_non_employee_users_Notes__c.field-meta.xml
<CustomField>
    <fullName>Authorized_non_employee_users_Notes__c</fullName>
    <label>Authorized non-employee users - Notes</label>
    <type>TextArea</type>
</CustomField>