force-app/main/default/objects/Account/fields/AVA_BLNG__Entity_Use_Code__c.field-meta.xml
<CustomField>
    <fullName>AVA_BLNG__Entity_Use_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Type of Entity/Use Code, if any, associated with this Account provided by Avalara. Optional Field.</description>
    <inlineHelpText>Type of Entity/Use Code, if any, associated with this Account. Optional Field.</inlineHelpText>
    <label>Entity/Use Code(Deprecated)</label>
    <referenceTo>AVA_BLNG__Entity_Use_Code__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>