force-app/main/default/objects/Account/fields/AVA_BLNG__Exemption_Number__c.field-meta.xml
<CustomField>
    <fullName>AVA_BLNG__Exemption_Number__c</fullName>
    <description>This field will be used for AvaTax Exemption number</description>
    <inlineHelpText>Please enter exemption certification number, if any.</inlineHelpText>
    <label>Exemption Number(Deprecated)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>