force-app/main/default/objects/Account/fields/AVA_MAPPER__Entity_Use_code__c.field-meta.xml
<CustomField>
    <fullName>AVA_MAPPER__Entity_Use_code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Type of Entity/Use Code, if any, associated with this Account.</description>
    <inlineHelpText>Please select an entity use code (exemption reason) for this customer.</inlineHelpText>
    <label>Entity/Use code</label>
    <referenceTo>AVA_MAPPER__Entity_Use_code__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>