force-app/main/default/objects/Account/fields/AVA_SFCPQ__Business_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Business_Identification_Number__c</fullName>
    <label>Business Identification No(Deprecated)</label>
    <length>9</length>
    <type>Text</type>
</CustomField>