force-app/main/default/objects/Account/fields/AVA_SFCPQ__Is_Seller_Importer_Of_Record__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Is_Seller_Importer_Of_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Seller Importer Of Record(Deprecated)</label>
    <type>Checkbox</type>
</CustomField>