force-app/main/default/objects/Account/fields/Average_days_for_pending_items_14_days__c.field-meta.xml
<CustomField>
    <fullName>Average_days_for_pending_items_14_days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Average days for pending items &lt;=14 days</label>
    <type>Checkbox</type>
</CustomField>