force-app/main/default/objects/Account/fields/Avg_Employee_Initial__c.field-meta.xml
<CustomField>
    <fullName>Avg_Employee_Initial__c</fullName>
    <description>Used in Billing Employee Count calculation</description>
    <inlineHelpText>Customer&#39;s stated employee count, typically captured on new subscriptions. Only the Billing Team can edit for subscribed accounts.</inlineHelpText>
    <label>Avg Employee (Initial)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>