force-app/main/default/objects/Account/fields/Avg_Logins_Employee_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Avg_Logins_Employee_Contractor__c</fullName>
    <formula>If( ISPICKVAL(ISNetworld_Status__c,&#39;Subscriber&#39;) , 
     ((ISN_Company_Record__r.YTD_Logins__c / Month(Today())) + (ISN_Company_Record__r.Prior_Year_Logins__c / 12 * (12 - Month(Today()))) / 12 /  ISN_Company_Record__r.Active_Users__c /  ISN_Company_Record__r.TotalContractors__c) ,
((ISN_Company_Record__r.YTD_Logins__c / Month(Renewal_Date__c)) + (ISN_Company_Record__r.Prior_Year_Logins__c / 12 * (12 - Month(Renewal_Date__c))) / 12 /  ISN_Company_Record__r.Active_Users__c /  ISN_Company_Record__r.TotalContractors__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Logins / Employee / Contractor</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>